# zmk-layout-shift

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  README_ja.md
.cursor/rules/: zmk.mdc
.github/workflows/: test.yml
dts/: layout_shift.dtsi  layout_shift_kp_override.dtsi  layouts.dtsi
dts/bindings/: zmk,layout-shift-map.yaml
dts/bindings/behaviors/: zmk,behavior-layout-shift-toggle.yaml
dts/dt-bindings/zmk/: layout_shift.h
src/: behavior_layout_shift_key_press.c  behavior_layout_shift_mouse_scroll.c  behavior_layout_shift_to.c  behavior_layout_shift_toggle.c  behavior_momentary_layer_shift.c  layout_shift_map.c  layout_shift_map.h
src/layouts/: layout_common.h  layout_dvorak.h  layout_jis.h  layout_swap_ctrl_cmd.h
tests/layout-shift/kpls-jis-mapped-key/: native_posix_64.keymap
tests/layout-shift/kpls-jis-unmapped-key/: native_posix_64.keymap
tests/layout-shift/kpls-jis-with-optional-mod/: keycode_events.snapshot  native_posix_64.keymap
tests/layout-shift/kpls-no-layout-active/: keycode_events.snapshot  native_posix_64.keymap
tests/layout-shift/multiple-maps-independent/: keycode_events.snapshot  native_posix_64.keymap
tests/layout-shift/multiple-maps-priority/: native_posix_64.keymap
tests/layout-shift/multiple-maps-priority-tie/: keycode_events.snapshot  native_posix_64.keymap
tests/layout-shift/multiple-maps-simultaneous/: keycode_events.snapshot  native_posix_64.keymap
tests/layout-shift/swap-ctrl-cmd-embedded/: keycode_events.snapshot  native_posix_64.keymap
zephyr/: module.yml
(+7 files in other folders)
